--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -22,7 +22,7 @@
 
         </section>
         <!-- NAVBAR FINISH -->
-        <a href="https://www.hwr-berlin.de/">link text</a>
+        <a href="https://www.hwr-berlin.de/">HWR Berlin</a>
         <h1>I have been seen {{ count }} times.</h1>
         <ul>
             {% for i in range(1, count+1) %}
