--- a/app/templates/titanic.html
+++ b/app/templates/titanic.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <title>Titanic Page</title>
 </head>
 <body>
-deneme
+  <h1>Titanic Page</h1>
+  <h2>First 5 rows of Titanic Dataset</h2>
+  {{ table | safe }}
+  <img src="../static/images/bar.png" alt="Survival by Gender Chart">
 </body>
 </html>
